fixed name overflow issue

--- a/static/styles/modal.css
+++ b/static/styles/modal.css
@@ -50,7 +50,10 @@
     font-size: 1.375rem;
     font-weight: 600;
     line-height: 1.25;
-
+    overflow:hidden; 
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    padding-right: 1rem;
     /* help_link_widget margin for the fa-circle-o. */
     .help_link_widget {
         margin-left: 5px;
